Panel de administracion y cambio a MUI

--- a/src/pages/admin/Auth/Auth.scss
+++ b/src/pages/admin/Auth/Auth.scss
@@ -18,21 +18,22 @@
   &__forms {
     width: 450px;
 
-    .ui.menu {
-      .item {
-        width: 50%;
-        justify-content: center;
-        background-color: #fff !important;
-        border-radius: 0 !important;
-        border-top: 4px solid $border-grey !important;
-        font-size: 18px;
-
-        &.active {
-          font-weight: normal;
-          border-radius: 0 !important;
-          border-top-color: $primary !important;
-        }
-      }
+    .tab-menu {
+      width: 50%;
+      justify-content: center;
+      background-color: #fff;
+      font-size: 18px;
+      text-transform: capitalize;
+      color: $text-dark;
     }
+
+    .MuiTabs-indicator {
+      top: 0;
+      height: 3px;
+    }
+  }
+  .panel {
+    background-color: #fff;
+    width: 450px;
   }
 }
