--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -3,6 +3,7 @@ $primary-hover: #0280b3;
 
 //Text
 $text-light: #fff;
+$text-dark: #000;
 
 //background
 $background-dark: #001b35;
@@ -15,9 +16,15 @@ $border-grey: #808080;
 //Status
 $success: #84b84c;
 $error: #9f3a38;
+$formError: #d32f2f;
 
 //Social color
 $youTube: #cd201f;
 $twitter: #1da1f2;
 $faceBook: #3b5998;
 $linkedIn: #0077b5;
+
+:root {
+  --borderGrey: #{$border-grey};
+  --error: #{$formError};
+}
