--- a/src/components/Admin/Users/UserForm/UserForm.scss
+++ b/src/components/Admin/Users/UserForm/UserForm.scss
@@ -1,1 +1,21 @@
 @import "~/src/scss/index.scss";
+
+.user-form {
+  &__avatar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    > .image {
+      border-radius: 50%;
+      border: 2px dashed $primary;
+      cursor: pointer;
+      padding: 5px;
+
+      > .MuiAvatar-circular {
+        width: 80px;
+        height: 80px;
+      }
+    }
+  }
+}
