--- a/src/pages/admin/Users/Users.scss
+++ b/src/pages/admin/Users/Users.scss
@@ -5,6 +5,8 @@
     position: absolute !important;
     right: 0;
     top: 0;
+    margin-top: 10px !important;
+    z-index: 2;
   }
   &__forms {
     .tab-menu {
@@ -16,7 +18,6 @@
     }
 
     .MuiTabs-indicator {
-      top: 0;
       height: 3px;
     }
     .panel {
